# commercexl

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: release.ps1  release.py
src/commercexl/: __init__.py  http.py  http_common.py  module.py  provider.py
src/commercexl/docs/: GIFT_CERTIFICATES.md  HOW_TO_USE.md  PROMOCODES.md
src/commercexl/dto/: __init__.py  actor.py  balance.py  employee.py  order.py  payment.py  product.py  promocode.py
src/commercexl/models/: __init__.py  employees.py  orm_base.py  payments.py  promocodes.py  user_balance.py  user_credits_balance.py
src/commercexl/models/base/: __init__.py  item.py  order.py  payment.py  product.py
src/commercexl/models/products/: __init__.py  balance.py  gift_certificate.py
src/commercexl/routes/: __init__.py
src/commercexl/schemas/: __init__.py
src/commercexl/schemas/employees/: __init__.py  requests.py  responses.py
src/commercexl/schemas/orders/: __init__.py  requests.py  responses.py
src/commercexl/schemas/payments/: __init__.py  requests.py  responses.py
src/commercexl/schemas/pricing/: __init__.py  responses.py
src/commercexl/schemas/products/: __init__.py  responses.py
src/commercexl/schemas/promocodes/: __init__.py  requests.py  responses.py
src/commercexl/services/: base_config.py  base_runtime.py
src/commercexl/services/employee/: __init__.py  employee.py
src/commercexl/services/order/: base.py  order_create.py  order_runtime.py
src/commercexl/services/payment/: __init__.py  balance.py  base.py  handmade.py  payment_runtime.py  registry.py
src/commercexl/services/pricing/: __init__.py  credits.py
src/commercexl/services/products/: __init__.py  balance.py  base.py  gift_certificate.py  registry.py
src/commercexl/services/promocode/: __init__.py  base.py
src/commercexl/services/serialization/: __init__.py  order.py  payment.py  product.py
src/commercexl/utils/: __init__.py  media.py
tests/: conftest.py  test_config.py  test_module.py  test_runtime.py
